--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,6 +1,77 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap');
+* {
+	border: 0;
+	padding: 0;
+	margin: 0;
+	box-sizing: border-box;
+}
 
-html,
+html {
+	width: 100%;
+	height: 100%;
+	font-size: 10px;
+	scroll-behavior: smooth;
+}
+
 body {
-	font-family: 'Roboto', sans-serif;
+	width: 100%;
+	height: 100%;
+	font-family: 'HelveticaNeueCyr-Regular', 'Arial', sans-serif;
+	color: black;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	overflow-x: hidden;
+}
+body.no-vertical-scroll {
+	overflow-y: hidden;
+}
+#root {
+	height: 100%;
+}
+button,
+input,
+select,
+textarea {
+	color: inherit;
+	font: inherit;
+	margin: 0;
+}
+a,
+p {
+	font-size: 1.4rem;
+}
+a:link,
+a:visited {
+	text-decoration: none;
+	cursor: pointer;
+}
+
+.link {
+	text-decoration: underline;
+	cursor: pointer;
+}
+
+.link:hover {
+	filter: brightness(120%);
+}
+
+.disabled {
+	opacity: 0.5;
+	pointer-events: none;
+}
+
+.no-overflow {
+	overflow: hidden;
+}
+
+.hidden {
+	display: none !important;
+}
+
+.flex {
+	display: flex;
+}
+
+.image {
+	width: 10rem;
+	height: 100%;
 }
