--- a/src/styles/css/main.css
+++ b/src/styles/css/main.css
@@ -1,4 +1,5 @@
 * {
+	white: black;
 	border: 0;
 	padding: 0;
 	margin: 0;
@@ -20,6 +21,7 @@ body {
 	-webkit-font-smoothing: antialiased;
 	-moz-osx-font-smoothing: grayscale;
 	overflow-x: hidden;
+	font-size: 1.4rem;
 }
 body.no-vertical-scroll {
 	overflow-y: hidden;
